--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -13,6 +13,8 @@
     
     <EditText
         android:id="@+id/login_message"
+        android:inputType="text"
+        android:hint=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_text" />
@@ -26,6 +28,8 @@
 
     <EditText
         android:id="@+id/pwd_message"
+        android:inputType="textPassword"
+        android:hint=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/pwd_text"
@@ -53,13 +57,21 @@
         android:id="@+id/register_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/login_message"
         android:layout_below="@+id/pwd_message"
         android:layout_toLeftOf="@+id/login_btn"
         android:onClick="confirmPwd"
         android:text="@string/register_btn" />
 
-     <TextView
+    <Button
+        android:id="@+id/destroy_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pwd_message"
+        android:layout_toLeftOf="@+id/register_btn"
+        android:onClick="confirmPwd"
+        android:text="@string/destroy_btn" />
+    
+    <TextView
         android:id="@+id/repwd_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,6 +81,8 @@
 
     <EditText
         android:id="@+id/repwd_message"
+        android:inputType="textPassword"
+        android:hint=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/repwd_text"
@@ -76,13 +90,13 @@
         android:visibility="invisible" />
 
     <Button
-        android:id="@+id/create_btn"
+        android:id="@+id/confirm_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/repwd_message"
-        android:onClick="register"
-        android:text="@string/create_btn"
+        android:onClick="doAction"
+        android:text="@string/confirm_btn"
         android:visibility="invisible" />
 
     <Button
@@ -90,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/repwd_message"
-        android:layout_toLeftOf="@+id/create_btn"
+        android:layout_toLeftOf="@+id/confirm_btn"
         android:onClick="goOut"
         android:text="@string/discard_btn"
         android:visibility="invisible" />
