--- a/res/layout/secretitem.xml
+++ b/res/layout/secretitem.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/gray1"
+    android:background="@color/mainbg"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
@@ -14,6 +14,7 @@
         android:id="@+id/secret_id"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:textColor="@color/txtcolor"
         android:clickable="true"
         android:onClick="openSecret"
         android:paddingBottom="5dp"
