--- a/res/layout/secretitem.xml
+++ b/res/layout/secretitem.xml
@@ -8,7 +8,7 @@
     <CheckBox
         android:id="@+id/secCheckBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent" />
 
     <TextView
         android:id="@+id/secret_id"
@@ -17,10 +17,10 @@
         android:textColor="@color/txtcolor"
         android:clickable="true"
         android:onClick="openSecret"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="5dp" />
+        android:paddingTop="10dp" />
 
 </LinearLayout>
 
