--- a/res/layout/secretphone.xml
+++ b/res/layout/secretphone.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent">
 
     <CheckBox
-        android:id="@+id/prop_check"
+        android:id="@+id/phone_check"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent" />
 
@@ -16,7 +16,7 @@
         android:layout_height="fill_parent">
         
 	    <TextView
-	        android:id="@+id/prop_key"
+	        android:id="@+id/phone_key"
 	        android:textColor="@color/txtcolor"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
@@ -27,11 +27,12 @@
             android:paddingTop="10dp" />
         
 	    <TextView
-	        android:id="@+id/prop_value"
+	        android:id="@+id/phone_value"
 	        android:textColor="@color/txtcolor"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:onClick="callPhone"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
